--- a/src/main/resources/resources/AcademicTreasuryResources_en.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_en.properties
@@ -128,3 +128,9 @@ label.SibsOnlinePaymentsGatewayForwardPaymentController.select.address=Choose on
 label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.title=Choose address for 3D Secure validation
 label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text=The chosen address will be sent to SIBS for validation of this operation by the 3D Secure protocol. We advise that this address is similar to the address registered in your bank institution.
 label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text2=If your address is incorrect or incomplete, fill it in portal Pessoal, menu Personal Area > Information.
+label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text3=If possible, make sure the address fields are delimited by the maximum characters accepted by 3D Secure protocol.
+label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text6=When sending this fields to SIBS, they will be delimited by the number of maximum characters.
+
+label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text4=Os pagamentos por cartão de crédito no espaço económico europeu implementam, desde janeiro de 2021, normativas de Autenticação Forte.
+label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text5=Caso ocorram dificuldades na utilização do seu cartão, confirme junto da sua entidade bancária o suporte ao procedimento Strong Customer Authentication - SCA.
+
