--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -1614,5 +1614,9 @@ label.SibsOnlinePaymentsGatewayForwardPaymentController.select.address=Selecione
 label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.title=Selecionar morada para validação 3D Secure
 label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text=A morada aqui escolhida será enviada à SIBS na validação desta operação pelo protocolo 3D Secure, pelo que recomendamos que seja similar à registada na sua instituição bancária.
 label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text2=Caso a sua morada esteja incompleta ou errada, deverá corrigi-la no portal Pessoal, menu Área Pessoal > Informação.
+label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text3=Se possível, assegure-se que os campos da morada escolhida encontram-se delimitados pelo nº máximo de caracteres aceites no protocolo 3D Secure.
+label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text6=Estes dados serão delimitados pelo nº máximo de caracteres, aquando do envio dos dados para a SIBS.
 
+label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text4=Os pagamentos por cartão de crédito no espaço económico europeu implementam, desde janeiro de 2021, normativas de Autenticação Forte.
+label.SibsOnlinePaymentsGatewayForwardPaymentController.selectPhysicalAddress.text5=Caso ocorram dificuldades na utilização do seu cartão, confirme junto da sua entidade bancária o suporte ao procedimento Strong Customer Authentication - SCA.
 
