- New Fixture: Payment plans for debit entries

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- New Fixture: Payment plans for debit entries
+
 5.0.4 (31-01-2021)
 - Improvement: Show 3D Secure address details selection, with text length
 
