--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Bug Fix: In collecting open installments to present in debt account page, bypass customers without debt account for finantial institution 
+
 6.0.1 (01-03-2021)
 - Bug Fix: Fix LocalizedString content display in jsp file
 
