--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- New Fixture: Creation of reference codes in student portal
+
 6.0.2 (08-03-2021)
 - Bug Fix: In collecting open installments to present in debt account page, bypass customers without debt account for finantial institution 
 
