--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Improvement: Show debt report file size as kb, if the size is lower than 1MB
+
 7.0.0 (10-04-2021)
 - New Fixture: Digital Payment Platform
 
