--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Improvement: Use default payment platform to Automatic rules and Academic services
+
 7.0.1 (12-04-2021)
 - Improvement: Show debt report file size as kb, if the size is lower than 1MB
 
