- Refactor: Refactor in tuition payment plan model, interfaces in spring are now deprecated and will be removed

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,5 +1,6 @@
 - Refactor: Remove reference to TuitionPaymentPlan.name in JSP
 - Improvement: Use default payment platform to Automatic rules and Academic services
+- Refactor: Refactor in tuition payment plan model, interfaces in spring are now deprecated and will be removed
 
 7.0.1 (12-04-2021)
 - Improvement: Show debt report file size as kb, if the size is lower than 1MB
