--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Bug Fix: Read customer's associated person, instead of getPerson()
+
 8.0.2 (16-09-2021)
 - Refactor: Change TuitionPaymentPlanGroup.edit() invocation
 
