--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Mark ExemptionsGenerationRowResult::exemptedAmount as deprecated and replace with ExemptionsGenerationRowResult::netExemptedAmount
+
 8.0.5 (28-02-2022)
 - Refactor: Change treasury from CronTask to RuntimeTaskExecutors
 - Improvement: Override information of finantial institution info header in online payments
