--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Bug Fix: Return false in evaluation of permission, if degree has no associated finantial entity
+
 8.0.6 (16-03-2022)
 - Refactor: Mark ExemptionsGenerationRowResult::exemptedAmount as deprecated and replace with ExemptionsGenerationRowResult::netExemptedAmount
 - Improvement: Control periodic execution of academic debt generation rules
