--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Bug Fix: For now degrees are always associated with AdministrativeOffice, but the administrativeOffice might not associated with FinantialEntity. If there is no finantialEntity for administrativeOffice, fallback to units.
+
 8.1.1 (24-05-2022)
 - Refactor: Present messages like information or warnings, given by some treasury debt process
 
