--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Remove AdministrativeOffice option from AcademicTariff creation
+
 8.1.2 (24-06-2022)
 - Bug Fix: For now degrees are always associated with AdministrativeOffice, but the administrativeOffice might not associated with FinantialEntity. If there is no finantialEntity for administrativeOffice, fallback to units.
 
