--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Bug Fix: In retrieving the degrees associated with finantial entity by parent unit, filter the units which does not have the degree set
+
 8.1.3 (18-07-2022)
 - Refactor: Remove AdministrativeOffice option from AcademicTariff creation
 
