--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Delete old finantial entity management UI
+
 8.1.4 (20-07-2022)
 - Bug Fix: In retrieving the degrees associated with finantial entity by parent unit, filter the units which does not have the degree set
 
