--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- New Feature: Dynamic interest rate calculators
+
 8.1.5 (20-10-2022)
 - Refactor: Delete old finantial entity management UI
 - Refactor: Remove deprecated InterestType.DAILY
