- Improvement: Present active sibs payment requests if expiration date is not set or it is not expired

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Improvement: Present active sibs payment requests if expiration date is not set or it is not expired
+
 9.0.0 (25-05-2023)
 - New Feature: Dynamic interest rate calculators
 
