--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Remove management screens and controller for academic debt generation rule
+
 9.1.0 (10-07-2023)
 - Refactor: Remove management interfaces for tuition payment plan groups
 
