- Refactor: Change visibility of AcademicTreasuryAccessControlExtension#isFrontOfficeMember(String, FinantialEntity) to public, to conform with superclass [#qubIT-Fenix-4596]

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Change visibility of AcademicTreasuryAccessControlExtension#isFrontOfficeMember(String, FinantialEntity) to public, to conform with superclass [#qubIT-Fenix-4596]
+
 9.2.1 (31-10-2023)
 - Refactor: Rename method PaymentRequestLog#isInvocationSuccess to PaymentRequestLog#isOperationSuccess [#qubIT-Fenix-4327]
 
