--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Makes necessary changes for jdk 17 migration [#qubIT-Omnis-4717]
+
 9.2.2 (29-11-2023)
 - Refactor: Change visibility of AcademicTreasuryAccessControlExtension#isFrontOfficeMember(String, FinantialEntity) to public, to conform with superclass [#qubIT-Fenix-4596]
 
