--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Refactors code to isolate qub-docs dependency [#qubIT-Fenix-5085]
+
 9.3.0 (31-01-2024)
 - Improvement: Adds fenixedu OSS DM [#qubIT-Omnis-4736]
 - Refactor: Remove duplicated classes already declared in fenixedu-academic-treasury-base [#qubIT-Fenix-4915]
