--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Removes reference to ReportGenerationException [#qubIT-Fenix-5085]
+
 9.4.0 (19-04-2024)
 - Refactor: Refactors code to isolate qub-docs dependency [#qubIT-Fenix-5085]
 
