--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Bring PaymentCodePool#isReferenceCodesActiveForStudentPortal to this module [#UL-ISCSP-1764]
+
 9.5.0 (22-04-2024)
 - Refactor: Removes reference to ReportGenerationException [#qubIT-Fenix-5085]
 
