--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,4 +1,5 @@
 - Refactor: Bring PaymentCodePool#isReferenceCodesActiveForStudentPortal to this module [#UL-ISCSP-1764]
+- Improvement: Redefine if the option for generating reference codes for student is available [#UL-ISCSP-1764]
 
 9.5.0 (22-04-2024)
 - Refactor: Removes reference to ReportGenerationException [#qubIT-Fenix-5085]
