--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Fix comparator applied in CustomerAccountingController#findUniqueActiveForForwardPaymentService [#qubIT-Fenix-5268]
+
 9.6.0 (02-05-2024)
 - Refactor: Bring PaymentCodePool#isReferenceCodesActiveForStudentPortal to this module [#UL-ISCSP-1764]
 - Improvement: Redefine if the option for generating reference codes for student is available [#UL-ISCSP-1764]
