--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Remove usage of AdministrativeOffice relations [#qubIT-Fenix-5448]
+
 9.8.0 (17-06-2024)
 - Improvement: Performs release for jdk 17 [#qubIT-Omnis-4737]
 
