--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Removes poi dependency [#qubIT-Omnis-6199]
+
 9.8.1 (26-06-2024)
 - Refactor: Remove usage of AdministrativeOffice relations [#qubIT-Fenix-5448]
 
