--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Bug Fix: When retrieving the PersonCustomer#getActiveCustomer(), validate that the active customer is found. If it is not, throw exception [#qubIT-Fenix-6386]
+
 9.9.0 (03-07-2024)
 - Refactor: Removes poi dependency [#qubIT-Omnis-6199]
 
