--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Display academic tariff degrees instead of one degree [#qubIT-Fenix-6753]
+
 9.9.2 (07-02-2025)
 - Refactor: Remove references to IAcademicTreasuryPlatformDependentServices [#qubIT-Fenix-6593]
 
