--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+- Refactor: Remove or change invocation calls of some methods of ITreasuryPlatformDependentServices [#qubIT-Fenix-7855]
+
 9.9.3 (30-05-2025)
 - Refactor: Display academic tariff degrees instead of one degree [#qubIT-Fenix-6753]
 
